[package]
name = "walker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.32", features = ["derive"]}
tokio = { version = "1.24.1", features = ["full"] }
async-recursion = "1.0.0"
reqwest = { version = "0.11", features = ["json", "blocking", "tokio-rustls"] }
scraper = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0.0"
arboard = "3.2.0"
futures = "0.3.25"