[package]
name = "link-walker"
version = "0.2.0"
edition = "2021"
authors = ["ynbh yshsclg@gmail.com"]
license = "MIT"
description = "A recursive link walker that scans for broken links on a website."
readme = "README.md"
homepage = "https://walker.ynb.sh"
repository = "https://github.com/ynbh/walker"
keywords = ["broken-links", "link-crawler", "dead-links-checker", "dead-links", "link-walker"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.32", features = ["derive"]}
tokio = { version = "1.24.1", features = ["full"] }
async-recursion = "1.0.0"
reqwest = { version = "0.11", features = ["json", "blocking", "tokio-rustls"] }
scraper = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0.0"
arboard = "3.2.0"
regex = "1.7.1"
futures = "0.3.25"